--- a/view.ejs
+++ b/view.ejs
@@ -73,7 +73,7 @@
                     <div class="bg-zinc-800  rounded p-4 mt-2 max-h-[82vh] overflow-y-scroll">
                         <% followers.forEach((user) => { %>
                             <div class="bg-zinc-900 p-2 mb-1 rounded-lg font-semibold text-gray-300">
-                                <a href="http://instagram.com/<%= user %>" target="_blank" rel="noopener noreferrer">
+                                <a href="https://instagram.com/<%= user %>" target="_blank" rel="noopener noreferrer">
                                     @<%= user %>
                                 </a>
                             </div>
@@ -92,7 +92,7 @@
                     <div class="bg-zinc-800  rounded p-4 mt-2 max-h-[82vh] overflow-y-scroll">
                         <% following.forEach((user) => { %>
                             <div class="bg-zinc-900 p-2 mb-1 rounded-lg font-semibold text-gray-300">
-                                <a href="http://instagram.com/<%= user %>" target="_blank" rel="noopener noreferrer">
+                                <a href="https://instagram.com/<%= user %>" target="_blank" rel="noopener noreferrer">
                                     @<%= user %>
                                 </a>
                             </div>
@@ -111,7 +111,7 @@
                     <div class="bg-zinc-800  rounded p-4 mt-2 max-h-[82vh] overflow-y-scroll">
                         <% notMutual.forEach((user) => { %>
                             <div class="bg-zinc-900 p-2 mb-1 rounded-lg font-semibold text-gray-300" id="notMutual_<%= user %>">
-                                <a href="http://instagram.com/<%= user %>" target="_blank" rel="noopener noreferrer">
+                                <a href="https://instagram.com/<%= user %>" target="_blank" rel="noopener noreferrer">
                                     @<%= user %>
                                 </a>
                                 
