🚀 Fix and added font fallbacks

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,8 +4,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-.roboto {
-    font-family: "Roboto", serif;
+
+
+body {
+    font-family: "Roboto", Arial, serif;
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
